# updateCitation

./: .editorconfig  .gitignore  .isort.cfg  CITATION.cff  README.md  context7.json  pyproject.toml  pyrightconfig.json  ruff.toml  ty.toml
.github/: FUNDING.yml  HH-docstrings.md  HH-formatting.md  HH-identifiers.md  HH-post-defensive.md  HH-status-messages.md  HH-syntactic-clarity.md  HH-type-annotations.md
.github/workflows/: githubRelease.yml  pypiRelease.yml  pythonTests.yml  updateCitation.yml
citations/: CITATION.cff
tests/: conftest.py  test_citationFileFormat.py  test_flowControl.py  test_github.py  test_nexusCitation.py  test_pypa.py  test_pypi.py  test_variables.py
tests/dataSamples/: citationAlpha.cff  pyproject.toml
updateCitation/: __init__.py  citationFileFormat.py  constants.py  flowControl.py  github.py  logistics.py  nexusCitation.py  pypa.py  pypi.py  pyprojectDOTtoml.py  references.py  updateCitation.yml  variables.py
updateCitation/citations/: CITATION.cff  Spaaks_cffconvert_2021.bibtex
